--- a/src/components/share/Email.astro
+++ b/src/components/share/Email.astro
@@ -1,11 +1,11 @@
 ---
 import { Image } from "astro:assets";
 
-const { url, title, description} = Astro.props;
+const { url, title, description, loading} = Astro.props;
 let URL = `mailto:?subject=${title}&body=${description}%0A${url}`
 
 import Gmail from '@assets/share/gmail.png'
 ---
 <a class="social-share-btn" target="_blank" href={URL} rel="noopener noreferrer">
-  <Image loading="eager" src={Gmail} alt="Email" class="w-8 h-auto hover:scale-125 transition-all duration-500" />
+  <Image loading={loading} src={Gmail} alt="Email" class="w-8 h-auto hover:scale-125 transition-all duration-500" />
 </a>
