--- a/src/components/share/Medium.astro
+++ b/src/components/share/Medium.astro
@@ -1,10 +1,10 @@
 ---
 import { Image } from "astro:assets";
-const { url, title } = Astro.props;
+const { url, title, loading } = Astro.props;
 let URL = `https://medium.com/new-story?url=${encodeURIComponent(url)}&title=${title}`
 
 import Me from '@assets/share/medium.png'
 ---
 <a class="social-share-btn" target="_blank" href={URL} rel="noopener noreferrer">
-  <Image loading="eager" src={Me} alt="Medium" class="w-7 h-auto hover:scale-125 transition-all duration-500" />
+  <Image loading={loading} src={Me} alt="Medium" class="w-7 h-auto hover:scale-125 transition-all duration-500" />
 </a>
