--- a/src/components/share/Whatsapp.astro
+++ b/src/components/share/Whatsapp.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-const { url, description } = Astro.props;
+const { url, description, loading} = Astro.props;
 
 let URL = `whatsapp://send?text=`;
 
@@ -11,5 +11,5 @@ import Wha from '@assets/share/whatsapp.png'
 ---
 
 <a class="social-share-btn" target="_blank" href={encodeURI(URL)} rel="noopener noreferrer" data-action="share/whatsapp/share" >
-  <Image loading="eager" src={Wha} alt="WhatsApp" class="w-8 h-auto hover:scale-125 transition-all duration-500" />
+  <Image loading={loading} src={Wha} alt="WhatsApp" class="w-8 h-auto hover:scale-125 transition-all duration-500" />
 </a>
