--- a/src/components/sidebar/recentCardBlog.astro
+++ b/src/components/sidebar/recentCardBlog.astro
@@ -1,31 +1,37 @@
 ---
-import { Image } from "astro:assets"
-const { post } = Astro.props;
-const {title, description, image, imagealt, pubDate, category, published} = post.data;
+import { Image } from "astro:assets";
+import { getPosts } from "@/lib/wordpress.ts";
 
-const date = new Date(pubDate);
-const year = date.getFullYear();
-const month = date.toLocaleString('en-US', { month: 'short' });
-const day = date.getDate();
-const formattedDate = `${day} ${month}`;
+const posts = await getPosts();
+
+function formatDate(dateString: string) {
+  const date = new Date(dateString);
+  const year = date.getFullYear();
+  const month = date.toLocaleString("en-US", { month: "short" });
+  const day = date.getDate();
+  return `${day} ${month}, ${year}`;
+}
 ---
-{published && (
-<a href={`/blog/${post.slug}/`} class="group relative rounded-2xl border" data-aos="fade-up" data-aos-duration="1000">
-  <div class='relative p-2 text-gray-700'>
-    <div class='p-2'>
-      <Image loading="lazy" src={image} alt={imagealt} class="rounded-2xl "/>
-      <span class='text-lg inline-block px-2 font-semibold pt-2 text-secondary mb-1 transition-all duration-500 ease-in-out relative after:absolute after:bottom-0 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 dark:after:bg-white 
-      after:bg-transparent after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] group-hover:after:origin-bottom-left group-hover:after:scale-x-100'>
-        {title}
-      </span>
-      <p class='text-sm text-gray-700 px-2 pb-3'>
-        {description.slice(0, 70) + "..." }
-      </p>
-    </div>
-    <div class="flex flex-row text-sm justify-between px-4">
-      <time datetime={pubDate} >{formattedDate}, {year}</time>
-      <span>{category}</span>
-    </div>
-  </div>
-</a>
-)}
+<div class="grid grid-cols-1 gap-4 mt-3">
+  {posts.sort((a: { date: string | number | Date; }, b: { date: string | number | Date; }) => new Date(b.date).getTime() - new Date(a.date).getTime()).slice(0, 3).map((post: any) => (
+    <a href={`/blog/${post.slug}/`} class="group relative rounded-2xl bg-gradient-to-r from-primary/10 to-secondary/10 border border-primary/20" data-aos="fade-up" data-aos-duration="1000">
+      <div class="relative p-2 text-gray-700">
+        <div class="p-2">
+          <Image src={post.featuredImage?.node?.sourceUrl || 'https://placehold.co/550x300?text=No+Feaured+Image'} alt={post.featuredImage?.node?.altText || post.title} class="w-full h-full object-cover border border-primary rounded-2xl" width={550} height={300} />
+          <span class="text-lg inline-block px-2 font-semibold pt-2 text-primary mb-1 transition-all duration-500 ease-in-out relative after:absolute after:bottom-0 after:left-0 after:h-[2px] after:w-full after:origin-bottom-right after:scale-x-0 dark:after:bg-white after:bg-transparent after:transition-transform after:duration-300 after:ease-[cubic-bezier(0.65_0.05_0.36_1)] group-hover:after:origin-bottom-left group-hover:after:scale-x-10" >
+            {post.title}
+          </span>
+          <p class="text-sm text-gray-700 px-2 pb-3">
+            {post.excerpt.replace(/<[^>]*>?/gm, "").slice(0, 70) + "..."}
+          </p>
+        </div>
+        <div class="flex flex-row text-sm justify-between px-4">
+          <time datetime={post.date}>{formatDate(post.date)}</time>
+          <span>
+            {post.categories.nodes.length > 0 ? post.categories.nodes[0].name : "Uncategorized"}
+          </span>
+        </div>
+      </div>
+    </a>
+  ))}
+</div>
